<!--
  ~    Copyright 2019 cuHacking
  ~
  ~    Licensed under the Apache License, Version 2.0 (the "License");
  ~    you may not use this file except in compliance with the License.
  ~    You may obtain a copy of the License at
  ~
  ~        http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~    Unless required by applicable law or agreed to in writing, software
  ~    distributed under the License is distributed on an "AS IS" BASIS,
  ~    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~    See the License for the specific language governing permissions and
  ~    limitations under the License.
  -->

<resources>
    <string name="app_name">cuHacking</string>
    <string name="info">Info</string>
    <string name="schedule">Schedule</string>
    <string name="map">Map</string>
    <string name="home">Home</string>

    <string name="authentication_failure">Authentication failed.</string>

    <string name="header_announcements">Announcements</string>
    <string name="header_info">Info</string>
    <string name="header_wifi">WiFi</string>
    <string name="header_emergency">Emergency Contact</string>
    <string name="header_help">Need Help?</string>

    <string name="action_connect">Connect</string>

    <string name="wifi_network">Network: %1$s</string>
    <string name="wifi_password">Password: %1$s</string>

    <string name="countdown_hack_start">Hacking begins in %1$s</string>
    <string name="countdown_hack_end">Hacking ends in %1$s</string>
    <string name="countdown_hack_over">Thank you for attending cuHacking 2020!</string>

    <string name="error_event_details">Could not load event details</string>

    <string name="event_add_favourite">Add to Favourites</string>
    <string name="event_remove_favourite">Remove from Favourites</string>
    <string name="event_view_map">View Location on Map</string>

    <string name="scan_success">Success</string>
    <string name="scan_error_already">This user has already been scanned for this event</string>
    <string name="scan_error_not_found">User not found</string>
    <string name="scan_error_denied">Permission denied for this user</string>
    <string name="scan_error_generic">An error occurred</string>
    <string name="scan_error_too_many">Cannot scan more than one code at a time</string>

    <string name="logout">Logout</string>

    <string name="color_group">%s Group</string>
    <string name="color_red">Red</string>
    <string name="color_green">Green</string>
    <string name="color_blue">Blue</string>
    <string name="color_yellow">Yellow</string>

    <string name="food_restrictions_other">Other: %s</string>
    <string name="food_nut_free">Nut Free</string>
    <string name="food_vegetarian">Vegetarian</string>
    <string name="food_lactose_free">Lactose Free</string>
    <string name="food_halal">Halal</string>
    <string name="food_gluten_free">Gluten Free</string>
    <string name="food_none">None</string>

    <string name="login_success">Login successful</string>
    <string name="login_error">Wrong Email or Password</string>
    <string name="logout_success">Logged out</string>
    <string name="login">Login</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="required">Required</string>
    <string name="onboard_login_description">Login to access your personalized badge which you will need during the event</string>
    <string name="onboard_login_title">Login Here</string>
    <string name="emergency_notice">In case of emergency, contact Campus Safety Services</string>

    <string name="time_duration">%1$s – %2$s</string>
    <string name="slack">Slack</string>
    <string name="twitter">Twitter</string>
    <string name="instagram">Instagram</string>
    <string name="facebook">Facebook</string>
    <string name="header_social">cuHacking Online</string>
    <string name="select_event">Select Event</string>
</resources>
