<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:layout_width="match_parent" android:layout_height="wrap_content">

    <TextView
            android:id="@+id/slack"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/slack"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            android:fontFamily="@font/reem_kufi"
            android:paddingVertical="4dp"
            android:paddingHorizontal="16dp"
            android:clickable="true"
            android:focusable="true"
            android:background="?selectableItemBackground"
            android:textColor="@color/colorPrimary"
            />
    <TextView
            android:id="@+id/twitter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/twitter"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            android:fontFamily="@font/reem_kufi"
            android:paddingVertical="4dp"
            android:paddingHorizontal="16dp"
            android:clickable="true"
            android:focusable="true"
            android:background="?selectableItemBackground"
            android:textColor="@color/colorPrimary"
            />
    <TextView
            android:id="@+id/instagram"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/instagram"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            android:fontFamily="@font/reem_kufi"
            android:paddingVertical="4dp"
            android:paddingHorizontal="16dp"
            android:clickable="true"
            android:focusable="true"
            android:background="?selectableItemBackground"
            android:textColor="@color/colorPrimary"
            />
    <TextView
            android:id="@+id/facebook"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/facebook"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            android:fontFamily="@font/reem_kufi"
            android:paddingVertical="4dp"
            android:paddingHorizontal="16dp"
            android:clickable="true"
            android:focusable="true"
            android:background="?selectableItemBackground"
            android:textColor="@color/colorPrimary"
            />
</LinearLayout>