<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".signin.ui.SignInActivity">

    <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/material_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:navigationIcon="@drawable/ic_back" />

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_text_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:hint="@string/hint_email"
            app:layout_constraintBottom_toTopOf="@+id/password_text_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image_logo"
            app:layout_constraintVertical_bias="0.0"
            app:layout_constraintVertical_chainStyle="packed">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_text_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/hint_password"
            app:layout_constraintBottom_toTopOf="@+id/sign_in_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email_text_layout">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
            android:id="@+id/sign_in_button"
            style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/login"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password_text_layout">

    </com.google.android.material.button.MaterialButton>

    <ProgressBar
            android:id="@+id/loading_indicator"
            style="?android:attr/progressBarStyle"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:indeterminateTint="#FFFFFF"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/sign_in_button"
            app:layout_constraintEnd_toEndOf="@+id/sign_in_button"
            app:layout_constraintStart_toStartOf="@+id/sign_in_button"
            app:layout_constraintTop_toTopOf="@+id/sign_in_button" />

    <ImageView
            android:id="@+id/image_logo"
            android:layout_width="0dp"
            android:layout_height="198dp"
            app:layout_constraintBottom_toTopOf="@+id/email_text_layout"
            app:layout_constraintDimensionRatio="w,1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/material_toolbar"
            app:layout_constraintVertical_bias="0.42000002"
            app:layout_constraintVertical_chainStyle="packed"
            app:srcCompat="@drawable/cuhacking_logo" />
</androidx.constraintlayout.widget.ConstraintLayout>
